apps/companies/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: core-service
spec:
  selector:
    app: core
  ports:
    - protocol: TCP
      port: 5002
      targetPort: 5002
---
apiVersion: v1
kind: Service
metadata:
  name: gateway-service
spec:
  selector:
    app: gateway
  ports:
    - protocol: TCP
      port: 8040
      targetPort: 5008
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  selector:
    app: nginx
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
    - name: https
      protocol: TCP
      port: 443
      targetPort: 443
    - name: http-8040
      protocol: TCP 
      port: 8040
      targetPort: 8040
    - name: http-8050
      protocol: TCP
      port: 8050
      targetPort: 8050
    - name: http-8060
      protocol: TCP
      port: 8060
      targetPort: 8060
    - name: http-8080
      protocol: TCP
      port: 8080
      targetPort: 8080
