apps/companies/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway-external-ingress
  namespace: platform
  annotations:
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443},{"HTTP":80}]'
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/backend-protocol: HTTPS
    alb.ingress.kubernetes.io/target-type: ip
    external-dns.alpha.kubernetes.io/ttl: "300"
    alb.ingress.kubernetes.io/healthcheck-path: /alive
    alb.ingress.kubernetes.io/healthcheck-port: '8080'
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
    alb.ingress.kubernetes.io/scheme: internet-facing
spec:
  ingressClassName: alb
  rules:
    - host: company2-gateway.purpleray.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-service
                port:
                  number: 8040
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway-internal-ingress
  namespace: platform
  annotations:
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":8040}]'
    alb.ingress.kubernetes.io/backend-protocol: HTTPS
    alb.ingress.kubernetes.io/target-type: ip
    external-dns.alpha.kubernetes.io/ttl: "300"
    alb.ingress.kubernetes.io/healthcheck-path: /alive
    alb.ingress.kubernetes.io/healthcheck-port: '8080'
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
    alb.ingress.kubernetes.io/scheme: internal
spec:
  ingressClassName: alb
  rules:
    - host: company2.internal-services
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-service
                port:
                  number: 8040
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: core-internal-ingress
  namespace: platform
  annotations:
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":5002}]'
    alb.ingress.kubernetes.io/backend-protocol: HTTP
    alb.ingress.kubernetes.io/target-type: ip
    external-dns.alpha.kubernetes.io/ttl: "300"
    alb.ingress.kubernetes.io/healthcheck-path: /alive
    alb.ingress.kubernetes.io/healthcheck-port: '8080'
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
    alb.ingress.kubernetes.io/scheme: internal
spec:
  ingressClassName: alb
  rules:
    - host: company2.internal-services
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-service
                port:
                  number: 8050
